--- a/.github/workflows/dokka-build.yml
+++ b/.github/workflows/dokka-build.yml
@@ -27,7 +27,7 @@ jobs:
         run: ./gradlew dokkaHtml
       - name: Deploy API documentation to Github Pages
         if: ${{github.event_name == 'push'}}
-        uses: JamesIves/github-pages-deploy-action@4.2.5
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           BRANCH: master
           FOLDER: /docs
