--- a/.github/workflows/dokka-build.yml
+++ b/.github/workflows/dokka-build.yml
@@ -30,5 +30,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: . # The folder the action should deploy.
-          message: "update: API documentation" # The commit message.
+          folder: build # The folder the action should deploy.
+          commit-message: "Update: API documentation" # The commit message.
