--- a/.github/workflows/dokka-build.yml
+++ b/.github/workflows/dokka-build.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: build/docs # The folder the action should deploy.
-          commit-message: "Update: API documentation" # The commit message.
+          commit-message: "Update: Kotlin Gems API documentation"
